Eureka server, eureka client and api.yml update
