# sparknetworks-filtermatches-backend/src/main/java/com/sparknetworks/backend/controller/advice/ControllerAdvice.java
@@ -1,0 +1,33 @@
+package com.sparknetworks.backend.controller.advice;
+
+import java.time.LocalDateTime;
+import java.util.Optional;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
+
+import com.sparknetworks.backend.exceptions.InvalidRequestException;
+import com.sparknetworks.model.ResponseError;
+
+@RestControllerAdvice
+public class ControllerAdvice {
+
+	/**
+	 * @param e
+	 * @param wr
+	 * @return
+	 */
+	@ExceptionHandler(value = { InvalidRequestException.class })
+	public ResponseEntity<ResponseError> handleInvalidRequestException(RuntimeException e, WebRequest wr) {
+		String error = Optional.of(e.getMessage()).orElse(e.getClass().getName())
+				+ " [Invalid request exception! => (InvalidRequestException)]";
+		ResponseError errorResponse = new ResponseError().createdAt(LocalDateTime.now().toString())
+				.detailedMessage(error).errorCode(HttpStatus.BAD_REQUEST.value())
+				.exceptionName(InvalidRequestException.class.getName()).errorMessage(e.getMessage());
+		//logger.error(errorResponse.toString(), e);
+		return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
+	}
+}
